[package]
name = "esp-idf-improv-wifi"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "ImprovWiFi serial provisioning protocol for esp-idf-svc in Rust"
license = "Apache-2.0"
repository = "https://github.com/nightwatch-astro/esp-idf-improv-wifi"
keywords = ["esp-idf", "esp32", "improv", "wifi", "provisioning"]
categories = ["embedded", "network-programming"]
readme = "README.md"

[features]
default = []
esp-idf-svc = ["dep:esp-idf-svc"]

[dependencies]
esp-idf-svc = { version = "0.52", default-features = false, optional = true }
log = "0.4"
thiserror = "2"
