[package]
name = "esp-idf-improv-wifi"
version = "0.2.3"
edition = "2021"
rust-version = "1.75"
description = "ImprovWiFi serial provisioning protocol for esp-idf-svc in Rust"
license = "Apache-2.0"
repository = "https://github.com/nightwatch-astro/esp-idf-improv-wifi"
keywords = ["esp-idf", "esp32", "improv", "wifi", "provisioning"]
categories = ["embedded", "network-programming"]
readme = "README.md"

[features]
default = []
esp-idf-svc = ["dep:esp-idf-svc"]

[lints.clippy]
# Broad lint groups (lower priority so individual overrides win)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Restriction lints for embedded library safety
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
undocumented_unsafe_blocks = "warn"
mem_forget = "warn"

[dependencies]
esp-idf-svc = { version = "0.52", default-features = false, optional = true }
log = "0.4"
thiserror = "2"
